# pype

./: .gitattributes  .gitignore  123.ipynb  CMakeLists.txt  README.md  build_dev.sh  build_linux.sh  build_web.sh  build_win.bat  compile_flags.txt  preprocess.py  run_dev.sh  run_linux.sh
.github/workflows/: main.yml
as_proj/: settings.gradle
as_proj/app/: CMakeLists.txt  build.gradle
as_proj/app/src/main/: AndroidManifest.xml
as_proj/gradle/wrapper/: gradle-wrapper.properties
game/: config.py  main.py  pype.pyi
platform/linux/: CMakeLists.txt  build.sh
project/: Button.h  Color.h  Common.h  Font.h  GameObject.h  Image.h  Input.h  Label.h  Node.h  PainterEngine_Application.cpp  PainterEngine_Application.h  PainterEngine_Startup.h  ProgressBar.h  TextEdit.h  Texture2D.h  Vector2.h  _common.h  _debugserver.h  _easing.h  _keycodes.h  _misc.h  _platform.h  _pype.h  config.py  debugserver.h  framework.h  gl.h  main.py  pocketpy.h  preprocess.py  pype.pyi  stub.py
project/httplib/: 123.ipynb
project/python/: 0_Node.py  0_PainterEngine.py  0_Resources.py  0_Signal.py  0_Time.py  1_Tween.py  1_Tweener.py  2_AnimatedSprite2D.py  2_Button.py  2_Image.py  2_Label.py  2_Sprite.py  2_Sprite2D.py  3_FrameAnimator.py  Component.py  GameObject.py  Node.py  PainterEngine.py  Resources.py  Sprite2D.py  SpriteRenderer.py  Time.py  main.py
project/test/: config.py  easing.pyi  main.py  pype.pyi
